Update .gitignore with additional entries
Add common files and directories to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,35 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environments
+venv/
+env/
+.venv/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# Mac / Linux / Windows system files
+.DS_Store
+Thumbs.db
+
+# IDE and editor settings
+.vscode/
+.idea/
+*.swp
+
+# Python build / packaging
+build/
+dist/
+*.egg-info/
+
+# Images and large data (if generated automatically)
+*.png
+*.jpg
+*.gif
